// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init --yes should create package.json with defaults 1`] = `
Object {
  "license": "MIT",
  "main": "index.js",
  "name": "yarn-test",
  "version": "1.0.0",
}
`;

exports[`init --yes should create package.json with defaults 2`] = `
Object {
  "license": "MIT",
  "main": "index.js",
  "name": "hi-github",
  "repository": "https://github.com/user/repo",
  "version": "1.0.0",
}
`;
